--- a/Board_Project/pom.xml
+++ b/Board_Project/pom.xml
@@ -221,6 +221,13 @@
 		   <artifactId>commons-dbcp2</artifactId>
 		   <version>2.9.0</version>
 	   </dependency>
+	   
+	   <!-- 파일 업로드 지원 -->
+<!-- 	   <dependency> -->
+<!-- 	       <groupId>commons-fileupload</groupId> -->
+<!-- 		   <artifactId>commons-fileupload</artifactId> -->
+<!-- 		   <version>1.4</version> -->
+<!-- 	   </dependency> -->
 		
 		<!-- *********************************************************************************************************** -->
 		<!-- *************************************************** End *************************************************** -->
