--- a/Board_Project/pom.xml
+++ b/Board_Project/pom.xml
@@ -223,11 +223,11 @@
 	   </dependency>
 	   
 	   <!-- 파일 업로드 지원 -->
-<!-- 	   <dependency> -->
-<!-- 	       <groupId>commons-fileupload</groupId> -->
-<!-- 		   <artifactId>commons-fileupload</artifactId> -->
-<!-- 		   <version>1.4</version> -->
-<!-- 	   </dependency> -->
+	   <dependency>
+	       <groupId>commons-fileupload</groupId>
+		   <artifactId>commons-fileupload</artifactId>
+		   <version>1.4</version>
+	   </dependency>
 		
 		<!-- *********************************************************************************************************** -->
 		<!-- *************************************************** End *************************************************** -->
